--- a/message.html
+++ b/message.html
@@ -72,15 +72,15 @@ body{
 
 <div class="container-fluid">
 <div class="row">
-<div class="col-sm-2"></div>
+<div class="col-sm-2 col-md-2 col-lg-2"></div>
 
-<div class="col-sm-3 left">
+<div class="col-sm-3 col-md-3 col-lg-3 left">
 
 <h2>MESSAGES</h2>
 
 </div>
 
-<div class="col-sm-7"></div>
+<div class="col-sm-7 col-lg-7 col-md-7"></div>
 </div>
 
 <div class="row">
@@ -96,9 +96,9 @@ body{
 </div>
 
 <div class="row">
-<div class=" col-md-1"></div>
+<div class="col-sm-1 col-md-1 col-lg-1"></div>
 
-<div class="col-sm-6 col-md-6 left">
+<div class="col-sm-6 col-md-6 col-lg-6 left">
 
 <p id="border">
 	We feel delighted that you have taken the
@@ -119,7 +119,7 @@ lasting partnership awaits you.
 
 </div>
 
-<div class="col-sm-1"></div>
+<div class="col-sm-1 col-lg-1 col-md-1"></div>
 
 <div class="col-sm-5 col-md-4">
 	
