--- a/message.html
+++ b/message.html
@@ -76,7 +76,7 @@ body{
 
 <div class="col-sm-3 col-md-3 col-lg-3 left">
 
-<h2>MESSAGES</h2>
+<h2>MESSAGE</h2>
 
 </div>
 
@@ -123,7 +123,7 @@ lasting partnership awaits you.
 
 <div class="col-sm-5 col-md-4">
 	
-<img src="ironman.jpg" alt="Ironman" width="350px" height="250px">	
+<img src="image1.jpg" alt="Ironman" width="350px" height="250px">	
 </div>
 
 
