About Page almost done!

--- a/about.html
+++ b/about.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
+<html><head>
 	<title>About</title>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +6,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&amp;display=swap" rel="stylesheet">
 
 <style type="text/css">
 	
@@ -19,9 +17,9 @@ body{
 
 	.paragraph{
 		text-align: center;
-		padding: 10px;
+		padding: 5px;
 		font-weight: bold;
-		font-size: 20px;
+		font-size: 30px;
 		border: 1px solid white; 
 
 	}
@@ -36,12 +34,15 @@ body{
 
 <div class="row">
 
-<div class=" col-sm-2 col-md-1 col-lg-2 col-xl-3">
+<div class=" col-sm-2 col-md-2 col-lg-3 col-xl-4">
 </div>
 
 
-<div class="col-3 col-sm-8 col-md-8 col-lg-6 col-xl-5">
-<img class="" src="image2.jpg" alt="About Team">
+<div class="col col-sm-8 col-md-8 col-lg-6 col-xl-6">
+<img class="img-fluid" src="image2.jpg" alt="About Team" style="
+    width: 500px;
+    height: 360px;
+">
 </div>
 
 
@@ -52,11 +53,11 @@ body{
 
 <div class="row">
 
-<div class="col-sm-8 col-md-2 col-lg-3">
+<div class="col-sm-8 col-md-2 col-lg-2 col-xl-2">
 </div>
 
-<div class="col-12 col-sm-4 col-md-8 col-lg-6">
-<div class="paragraph text-left">
+<div class="col col-sm-4 col-md-8 col-lg-8 col-xl-9">
+<div class="paragraph">
 <p>Originating in July 2017, The Brainiac Trend has always been
 confident in the work we produced. For The Brainiac Trend
 has left no stone unturned in accumulating the best team
@@ -65,11 +66,11 @@ outstanding results while also catering to the Clients every need.</p>
 
 </div>
 </div>
-<div class="col-sm-2 col-md-3 col-lg-3">
+<div class="col-sm-2 col-md-3 col-lg-2">
 </div>
 
 </div>
 
 </div>
-</body>
-</html>
+
+</body></html>
