Message page updated but not finalised

--- a/message.html
+++ b/message.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
+<html><head>
 	<title>Our Message</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +6,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&amp;display=swap" rel="stylesheet">
 
 
 <style type="text/css">
@@ -20,20 +18,22 @@ body{
 .left h2{
 	color: #4CAF50;
 	font-weight: bold;
-	font-size: 4rem;
-	margin-top: 150px;
+	font-size: 3rem;
+
 }
 
 .left h4{
-    color: #5F5F5F;
-    font-weight: bold;
-    font-size: 1.5rem;
-    letter-spacing: -1px;
-        line-height: 1px;
+     color: #5F5F5F;
+     font-size: 1.5rem;
+     letter-spacing: 2px;
+     font-weight: bold;
+     line-height: 0px;
+     font-size: 1.5rem;
+
 }
 
 .left p{
-	    width: 500px;
+	width: 500px;
     margin-left: -13px;
     border-left: 6px solid black;
     margin-top: 26px;
@@ -51,7 +51,7 @@ body{
 </style>
 
 </head>
-<body >
+<body>
 
 <!-- <div class="container">
 <div class="left">
@@ -71,66 +71,45 @@ body{
 
 
 <div class="container-fluid">
+
 <div class="row">
-<div class="col-sm-2 col-md-2 col-lg-2"></div>
 
-<div class="col-sm-3 col-md-3 col-lg-3 left">
+<div class="col-sm-2 col-md-1 col-lg-1 col-xl-1"></div>
 
+<div class="left col col-sm-2 col-md-3 col-lg-1 col-xl-1">
 <h2>MESSAGE</h2>
-
 </div>
 
-<div class="col-sm-7 col-lg-7 col-md-7"></div>
-</div>
-
-<div class="row">
-<div class="col-sm-2 col-md-2 col-lg-2"></div>
-
-<div class="col-sm-3 col-md-3 col-lg-3 left">
-
-<h4>FROM THE TEAM</h4>
-
-</div>
-
-<div class="col-sm-7 col-lg-7 col-md-7"></div>
 </div>
 
 <div class="row">
-<div class="col-sm-1 col-md-1 col-lg-1"></div>
+<div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
 
-<div class="col-sm-6 col-md-6 col-lg-6 left">
 
-<p id="border">
-	We feel delighted that you have taken the
-time to go through our world in words.
-This document is particularly made for
-you so that you learn more about your
-future marketing partners and feel
-more comfortable in this partnership.
-We have a positive feeling that after a
-comprehensive study of this company
-services profile you will be strongly
-considering our mutual partnership.
-Looking forward on having you
-on board as our cherished client.
-We feel that a concrete and
-lasting partnership awaits you.
+<div class="col col-sm-2 col-md-4 col-lg-3 col-xl-3">
+<h4 style="font-weight: bold;">FROM THE TEAM</h4>		
+</div>
+</div>
+
+<div class="row">
+	<div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
+<div class="col col-sm-4 col-md-5 col-lg-4 col-xl-4">
+<p style="
+    padding: 5px;
+">
+	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 </p>
 
 </div>
 
-<div class="col-sm-1 col-lg-1 col-md-1"></div>
-
-<div class="col-sm-5 col-md-4">
-	
-<img src="image1.jpg" alt="Ironman" width="350px" height="250px">	
+<div class="col col-sm-6 col-md-6 col-lg-5 col-xl-5">
+<img class="img-fluid" src="image1.jpg" alt="About Team" style="width: 500px; height: 500px; padding-bottom: 150px; margin-top: -31px;">	
 </div>
-
 
 </div>
 
 
 
 </div>
-</body>
-</html>
+
+</body></html>
