--- a/about.html
+++ b/about.html
@@ -6,72 +6,71 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&amp;display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
 
-<style type="text/css">
-	
-body{
+  <style type="text/css">
+   
+    body{
 
-	font-family: 'Saira Semi Condensed';
+      font-family: 'Bebas Neue', cursive;
 
-}
+    }
 
-	.paragraph{
-		text-align: center;
-		padding: 5px;
-		font-weight: bold;
-		font-size: 30px;
-		border: 1px solid white; 
+    .paragraph{
+      text-align: center;
+      padding: 5px;
+      font-size: 30px;
+      border: 1px solid white; 
 
-	}
+    }
 
 
-</style>
+  </style>
 
 </head>
 <body>
 
-<div class="container">
+  <div class="jumbotron">
 
-<div class="row">
+    <div class="row">
 
-<div class=" col-sm-2 col-md-2 col-lg-3 col-xl-4">
-</div>
-
-
-<div class="col col-sm-8 col-md-8 col-lg-6 col-xl-6">
-<img class="img-fluid" src="image2.jpg" alt="About Team" style="
-    width: 500px;
-    height: 360px;
-">
-</div>
+      <div class=" col-sm-2 col-md-2 col-lg-3 col-xl-4">
+      </div>
 
 
-<div class=" col-sm-2 col-md-3 col-lg-3 ">
-</div>
+      <div class="col col-sm-8 col-md-8 col-lg-6 col-xl-6">
+        <img class="img-fluid" src="aboutImg.png" alt="About Team" style="
+        width: 500px;
+        height: 360px;
+        ">
+      </div>
 
-</div>
 
-<div class="row">
+      <div class=" col-sm-2 col-md-3 col-lg-3 ">
+      </div>
 
-<div class="col-sm-8 col-md-2 col-lg-2 col-xl-2">
-</div>
+    </div>
 
-<div class="col col-sm-4 col-md-8 col-lg-8 col-xl-9">
-<div class="paragraph">
-<p>Originating in July 2017, The Brainiac Trend has always been
-confident in the work we produced. For The Brainiac Trend
-has left no stone unturned in accumulating the best team
-that works devotedly from their heart to produce true and
-outstanding results while also catering to the Clients every need.</p>
+    <div class="row">
 
-</div>
-</div>
-<div class="col-sm-2 col-md-3 col-lg-2">
-</div>
+      <div class="col-sm-8 col-md-2 col-lg-2 col-xl-2">
+      </div>
 
-</div>
+      <div class="col col-sm-4 col-md-8 col-lg-8 col-xl-9">
+        <div class="paragraph">
+          <p>Originating in July 2017, The Brainiac Trend has always been
+            confident in the work we produced. For The Brainiac Trend
+            has left no stone unturned in accumulating the best team
+            that works devotedly from their heart to produce true and
+          outstanding results while also catering to the Clients every need.</p>
 
-</div>
+        </div>
+      </div>
+      <div class="col-sm-2 col-md-3 col-lg-2">
+      </div>
+
+    </div>
+
+  </div>
 
 </body></html>
