--- a/testing.html
+++ b/testing.html
@@ -17,7 +17,7 @@
 	<style type="text/css">
 
 		@media only screen and (min-width: 375px) {
-			
+
 
 			img{
 				margin-left: 6.95% !important;
@@ -26,7 +26,7 @@
 		}
 
 		@media only screen and (min-width: 425px) {
-			
+
 
 			img{
 				margin-left: 11.95% !important;
@@ -36,13 +36,13 @@
 
 
 		@media only screen and (min-width: 544px) { 
-			
+
 
 		}
 		@media only screen and (min-width: 768px) {
-			
+
 			.paragraph {
-				
+
 				padding: 15px 0 15px 0 !important;
 				font-size: 25px !important;
 				line-height: normal !important;
@@ -52,11 +52,11 @@
 			}
 		}
 		@media only screen and (min-width: 992px) {
-			
+
 
 		}
 		@media only screen and (min-width: 1024px) { 
-			
+
 			.navbar-nav {
 				margin-left: 37%;
 			}
@@ -90,7 +90,7 @@
 			}
 
 			.navbar-light .navbar-brand {
-				
+
 				font-size: 50px;
 				margin-left: 28px;
 			}
@@ -137,7 +137,7 @@
 				padding-right: 1.5rem;
 				padding-left: 5.5rem;
 			}
-			
+
 
 			img {
 				margin-left: 1% !important;
@@ -158,7 +158,7 @@
 
 		/*MEDIA QUERIEES END HERE*/
 
-		
+
 
 		.navbar{
 			background-color: #fbfbfb;
@@ -231,6 +231,18 @@
 			width: 20px;
 			height: 20px;
 		}
+
+		.dropdown-item{    display: block;
+    width: 100%;
+    padding: .25rem 1.5rem;
+    clear: both;
+    font-weight: 400;
+    color: #212529;
+    text-align: inherit;
+    white-space: nowrap;
+    background-color: #00B354;
+    border: 0;
+}}
 
 	</style>
 
