--- a/index.html
+++ b/index.html
@@ -1,16 +1,151 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The Brainiac Trend</title>
-	  <meta charset="utf-8">
+  <title>Portfolio</title>
+  <title>About</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="rma.png" type="image/gif" sizes="10 x 10">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">s
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="dist/css/bootstrap.min.css">
+
+
 </head>
 <body>
 
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <a class="navbar-brand" href="#">TBT</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav text-uppercase">
+        <li class="nav-item active">
+          <a class="nav-link" href="#about">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#message">Page</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#3letters">Page</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Page
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="jumbotron">
+
+<div class="row" id="about">
+
+<div class="col-sm-1 col-md-1 " ></div>
+
+<div class="col col-sm-8 col-md-10 col-lg-12 col-xl-12" > 
+ <img class="img-fluid aboutImg" src="Images/aboutImg.png" alt="About Team" style="margin-top: 30px;">
+
+</div>
+
+<div class="col-sm-1 col-md-1 " ></div>
+
+</div>
+
+<div class="row">
+
+    <div class=" col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
+    
+<div class="col col-sm-12 col-md-12 col-lg-10 col-xl-10">
+  
+<p class="paragraph">Originating in July 2017, The Brainiac Trend has always been
+confident in the work we produced. For The Brainiac Trend
+has left no stone unturned in accumulating the best team
+that works devotedly from their heart to produce true and
+outstanding results while also catering to the Clients every need.</p>
+</div> 
+    <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
+</div>
+
+<hr>
+
+<!-- ANOTHER DIV -->
+
+<div class="row" id="message">
+
+<div class="col-sm-1 col-md-1 " ></div>
+
+<div class="col col-sm-8 col-md-10 col-lg-12 col-xl-12" > 
+ <img class="img-fluid aboutImg" src="Images/aboutImg.png" alt="About Team" style="margin-top: 30px;">
+
+</div>
+
+<div class="col-sm-1 col-md-1 " ></div>
+
+</div>
+
+<div class="row">
+
+    <div class=" col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
+    
+<div class="col col-sm-12 col-md-12 col-lg-10 col-xl-10">
+  
+<p class="paragraph">Originating in July 2017, The Brainiac Trend has always been
+confident in the work we produced. For The Brainiac Trend
+has left no stone unturned in accumulating the best team
+that works devotedly from their heart to produce true and
+outstanding results while also catering to the Clients every need.</p>
+</div> 
+    <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
+</div>
+
+<hr>
+
+<!-- ANOTHER DIV -->
+
+
+<div class="row" id="3letters">
+
+<div class="col-lg-1">
+</div>
+
+
+<div class="col-sm-6 col-md-8 col-lg-6 col-xl-7">
+ <img class="img-fluid letterImg" src="Images/aboutImg.png" alt="About Team" style="margin-top: 30px; width: inherit;"> 
+</div>
+
+
+
+<div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
+<div class="letterHeading">
+ <h3 class="letterHeading1">3 LETTERS</h3> 
+  <h5 class="letterHeading2">THREE PROMISE</h5>
+</div>
+<p class="rightParagraph">Originating in July 2017, The Brainiac Trend has always been
+confident in the work we produced. For The Brainiac Trend
+has left no stone unturned in accumulating the best team
+that works devotedly from their heart to produce true and
+outstanding results while also catering to the Clients every need.</p>
+</div>
+
+
+
+
+
+</div>
+</div>
+
+</div>
 </body>
 </html>
