--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav text-uppercase">
         <li class="nav-item active">
-          <a class="nav-link" href="#about">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#about">About Us <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#message">Page</a>
+          <a class="nav-link" href="#message">Message</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#3letters">Page</a>
@@ -78,7 +78,7 @@ outstanding results while also catering to the Clients every need.</p>
     <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
 </div>
 
-<hr>
+
 
 <!-- ANOTHER DIV -->
 
@@ -110,7 +110,6 @@ outstanding results while also catering to the Clients every need.</p>
     <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
 </div>
 
-<hr>
 
 <!-- ANOTHER DIV -->
 
