--- a/index.html
+++ b/index.html
@@ -50,100 +50,126 @@
 
   <div class="jumbotron">
 
-<div class="row" id="about">
+    <div class="row" id="about">
 
-<div class="col-sm-1 col-md-1 " ></div>
+      <div class="col-sm-1 col-md-1 " ></div>
 
-<div class="col col-sm-8 col-md-10 col-lg-12 col-xl-12" > 
- <img class="img-fluid aboutImg" src="Images/aboutImg.png" alt="About Team" style="margin-top: 30px;">
+      <div class="col col-sm-8 col-md-10 col-lg-12 col-xl-12" > 
+       <img class="img-fluid aboutImg" src="Images/aboutImg.png" alt="About Team" style="margin-top: 30px;">
 
-</div>
+     </div>
 
-<div class="col-sm-1 col-md-1 " ></div>
+     <div class="col-sm-1 col-md-1 " ></div>
 
-</div>
+   </div>
 
-<div class="row">
-
-    <div class=" col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
-    
-<div class="col col-sm-12 col-md-12 col-lg-10 col-xl-10">
-  
-<p class="paragraph">Originating in July 2017, The Brainiac Trend has always been
-confident in the work we produced. For The Brainiac Trend
-has left no stone unturned in accumulating the best team
-that works devotedly from their heart to produce true and
-outstanding results while also catering to the Clients every need.</p>
-</div> 
-    <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
-</div>
-
-
-
-<!-- ANOTHER DIV -->
-
-<div class="row" id="message">
-
-<div class="col-sm-1 col-md-1 " ></div>
-
-<div class="col col-sm-8 col-md-10 col-lg-12 col-xl-12" > 
- <img class="img-fluid aboutImg" src="Images/aboutImg.png" alt="About Team" style="margin-top: 30px;">
-
-</div>
-
-<div class="col-sm-1 col-md-1 " ></div>
-
-</div>
-
-<div class="row">
+   <div class="row">
 
     <div class=" col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
     
-<div class="col col-sm-12 col-md-12 col-lg-10 col-xl-10">
-  
-<p class="paragraph">Originating in July 2017, The Brainiac Trend has always been
-confident in the work we produced. For The Brainiac Trend
-has left no stone unturned in accumulating the best team
-that works devotedly from their heart to produce true and
-outstanding results while also catering to the Clients every need.</p>
-</div> 
+    <div class="col col-sm-12 col-md-12 col-lg-10 col-xl-10">
+
+      <p class="paragraph">Originating in July 2017, The Brainiac Trend has always been
+        confident in the work we produced. For The Brainiac Trend
+        has left no stone unturned in accumulating the best team
+        that works devotedly from their heart to produce true and
+      outstanding results while also catering to the Clients every need.</p>
+    </div> 
     <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
+  </div>
+<hr>
+
+
+  <!-- ANOTHER DIV -->
+
+  <div class="row" id="message">
+
+    <div class="col-sm-1 col-md-1 " ></div>
+
+    <div class="col col-sm-8 col-md-10 col-lg-12 col-xl-12" > 
+     <img class="img-fluid aboutImg" src="Images/aboutImg.png" alt="About Team" style="margin-top: 30px;">
+
+   </div>
+
+   <div class="col-sm-1 col-md-1 " ></div>
+
+ </div>
+
+ <div class="row">
+
+  <div class=" col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
+
+  <div class="col col-sm-12 col-md-12 col-lg-10 col-xl-10">
+
+    <p class="paragraph">Originating in July 2017, The Brainiac Trend has always been
+      confident in the work we produced. For The Brainiac Trend
+      has left no stone unturned in accumulating the best team
+      that works devotedly from their heart to produce true and
+    outstanding results while also catering to the Clients every need.</p>
+  </div> 
+  <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
 </div>
 
-
+<hr>
 <!-- ANOTHER DIV -->
 
 
 <div class="row" id="3letters">
 
-<div class="col-lg-1">
+  <div class="col-lg-1">
+  </div>
+
+
+  <div class="col-sm-6 col-md-8 col-lg-6 col-xl-7">
+   <img class="img-fluid d-flex letterImg" src="Images/aboutImg.png" alt="About Team" style="margin-top: 30px; width: inherit;"> 
+ </div>
+
+
+
+ <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
+  <div class="letterHeading">
+   <h3 class="letterHeading1">3 LETTERS</h3> 
+   <h5 class="letterHeading2">THREE PROMISE</h5>
+ </div>
+ <p class="rightParagraph">For Each letter in our abbreviation,
+we have decided to bind a promise to
+that very letter. This act is inspired by the
+TBT Philosophy to communicate “from root to root”.<br>
+<span>-Sound and Responsive Strategies <br>
+-Paramount Execution of Planning (be it design or development). <br>
+-We deliver the best for your dollar.</span></p>
 </div>
 
 
-<div class="col-sm-6 col-md-8 col-lg-6 col-xl-7">
- <img class="img-fluid letterImg" src="Images/aboutImg.png" alt="About Team" style="margin-top: 30px; width: inherit;"> 
-</div>
-
-
-
-<div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
-<div class="letterHeading">
- <h3 class="letterHeading1">3 LETTERS</h3> 
-  <h5 class="letterHeading2">THREE PROMISE</h5>
-</div>
-<p class="rightParagraph">Originating in July 2017, The Brainiac Trend has always been
-confident in the work we produced. For The Brainiac Trend
-has left no stone unturned in accumulating the best team
-that works devotedly from their heart to produce true and
-outstanding results while also catering to the Clients every need.</p>
-</div>
-
-
 
 
 
 </div>
+
+<hr>
+<!-- ANOTHER DIV -->
+
+<div class="contact" id="contactUs">
+<div class="row text-uppercase">
+
+<div class="col col-sm-1 col-md-1 col-lg-1 col-xl-1">
+<h4 class="contactHeadings">contact</h4>
 </div>
+</div>
+
+<div class="col col-sm-1 col-md-1 col-lg-2 col-xl-2" id="mobileNumber">
+<span>(+92) 316 211 8684</span><br>
+<span>(+92) 336 250 1868</span>
+
+</div>
+
+
+
+</div>
+</div>
+
+
+
 
 </div>
 </body>
