Contact div, Responsive remaining

--- a/index.html
+++ b/index.html
@@ -163,7 +163,42 @@ TBT Philosophy to communicate “from root to root”.<br>
 
 </div>
 
+<br>
 
+
+<div class="row text-uppercase">
+<div class="col col-sm-1 col-md-1 col-lg-1 col-xl-1">
+<h4 class="contactHeadings">address</h4>
+</div>
+</div>
+
+<div class="col col-sm-1 col-md-1 col-lg-2 col-xl-2" id="mobileNumber">
+<span>306, 3rd Floor, Meriums Complex,
+BAHADURABD, KARACHI</span>
+</div>
+<br>
+
+<div class="row text-uppercase">
+<div class="col col-sm-1 col-md-1 col-lg-1 col-xl-1">
+<h4 class="contactHeadings">email</h4>
+</div>
+</div>
+
+<div class="col col-sm-1 col-md-1 col-lg-2 col-xl-2" id="mobileNumber">
+<span><a href="#"> info@thebrainiactrend.com</a></span>
+</div>
+
+<br>
+
+<div class="row text-uppercase">
+<div class="col col-sm-1 col-md-1 col-lg-1 col-xl-1">
+<h4 class="contactHeadings">website</h4>
+</div>
+</div>
+
+<div class="col col-sm-1 col-md-1 col-lg-2 col-xl-2" id="mobileNumber">
+<span><a href="#">www.thebrainiactrend.com</a></span>
+</div>
 
 </div>
 </div>
