--- a/testing.html
+++ b/testing.html
@@ -249,80 +249,103 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-expand-lg navbar-light fixed-top">
-		<a class="navbar-brand" href="#">TBT</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNavDropdown">
-			<ul class="navbar-nav text-uppercase">
-				<li class="nav-item active">
-					<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Page</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Page</a>
-				</li>
-				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Page
-					</a>
-					<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						<a class="dropdown-item" href="#">Action</a>
-						<a class="dropdown-item" href="#">Another action</a>
-						<a class="dropdown-item" href="#">Something else here</a>
-					</div>
-				</li>
-			</ul>
-		</div>
-	</nav>
-
 	<div class="jumbotron">
 
-		<div class="row">
+    <div class="row" id="about">
 
-			<div class=" col-sm-2 col-md-2 col-lg-3 col-xl-4">
-			</div>
+      <div class="col-sm-1 col-md-1 " ></div>
+
+      <div class="col col-sm-8 col-md-10 col-lg-12 col-xl-12" > 
+       <img class="img-fluid aboutImg" src="Images/aboutImg.png" alt="About Team" style="margin-top: 30px;">
+
+     </div>
+
+     <div class="col-sm-1 col-md-1 " ></div>
+
+   </div>
+
+   <div class="row">
+
+    <div class=" col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
+    
+    <div class="col col-sm-12 col-md-12 col-lg-10 col-xl-10">
+
+      <p class="paragraph">Originating in July 2017, The Brainiac Trend has always been
+        confident in the work we produced. For The Brainiac Trend
+        has left no stone unturned in accumulating the best team
+        that works devotedly from their heart to produce true and
+      outstanding results while also catering to the Clients every need.</p>
+    </div> 
+    <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
+  </div>
+<hr>
 
 
-			<div class="col col-sm-8 col-md-8 col-lg-6 
-			">
-			<img class="img-fluid" src="aboutImg.png" alt="About Team" style="width: 300px;height: 260px;margin-top: 50px;margin-left: 1.95%;">
-		</div>
+  <!-- ANOTHER DIV -->
+
+  <div class="row" id="message">
+
+    <div class="col-sm-1 col-md-1 " ></div>
+
+    <div class="col col-sm-8 col-md-10 col-lg-12 col-xl-12" > 
+     <img class="img-fluid aboutImg" src="Images/aboutImg.png" alt="About Team" style="margin-top: 30px;">
+
+   </div>
+
+   <div class="col-sm-1 col-md-1 " ></div>
+
+ </div>
+
+ <div class="row">
+
+  <div class=" col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
+
+  <div class="col col-sm-12 col-md-12 col-lg-10 col-xl-10">
+
+    <p class="paragraph">Originating in July 2017, The Brainiac Trend has always been
+      confident in the work we produced. For The Brainiac Trend
+      has left no stone unturned in accumulating the best team
+      that works devotedly from their heart to produce true and
+    outstanding results while also catering to the Clients every need.</p>
+  </div> 
+  <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"> </div>
+</div>
+
+<hr>
+<!-- ANOTHER DIV -->
 
 
-		<div class=" col-sm-2 col-md-3 col-lg-3 ">
-		</div>
+<div class="row" id="3letters">
+  <div class="col-lg-1">
+  </div>
 
-	</div>
 
-	<div class="row">
+  <div class="col-sm-6 col-md-8 col-lg-6 col-xl-7">
+   <img class="img-fluid d-flex letterImg" src="Images/aboutImg.png" alt="About Team" style="margin-top: 30px; width: inherit;"> 
+ </div>
 
-		<div class="col-sm-8 col-md-2 col-lg-2 col-xl-2">
-		</div>
 
-		<div class="col col-sm-4 col-md-8 col-lg-8 col-xl-8">
-			<div class="paragraph">
-				<p>Originating in July 2017, The Brainiac Trend has always been
-					confident in the work we produced. For The Brainiac Trend
-					has left no stone unturned in accumulating the best team
-					that works devotedly from their heart to produce true and
-				outstanding results while also catering to the Clients every need.</p>
 
-			</div>
-		</div>
-		<div class="col-sm-2 col-md-3 col-lg-2">
-		</div>
-
-	</div>
-
+ <div class="col col-sm-4 col-md-4 col-lg-4 col-xl-4">
+  <div class="letterHeading">
+   <h3 class="letterHeading1">3 LETTERS</h3> 
+   <h5 class="letterHeading2">THREE PROMISE</h5>
+ </div>
+ <p class="rightParagraph">For Each letter in our abbreviation,
+we have decided to bind a promise to
+that very letter. This act is inspired by the
+TBT Philosophy to communicate “from root to root”.<br>
+<span>-Sound and Responsive Strategies <br>
+-Paramount Execution of Planning (be it design or development). <br>
+-We deliver the best for your dollar.</span></p>
 </div>
 
 
 
 
+
+</div>
+</div>
 
 </body>
 </html>
