Title change in Index.html for testing

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en" class="full-height"><head>
-	<title>The Brainiac Trend</title>
+	<title>The Brainiac TREND</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="images/icon.png" type="image/gif" sizes="10 x 10">
